--- a/Вопросы .NET MOEX.md
+++ b/Вопросы .NET MOEX.md
@@ -212,6 +212,33 @@ public static void WriteValue()
         }
 
 }
+
+* Что выведет следующий код?
+```C#
+Console.WriteLine(string.Join(", ", new [] { 1, 2, 3, 4 }.Select(i => i % 2 == 0)));
+```
+
+* Что выведет следующая программа?
+```C# 
+using System;
+public class Program
+{
+    delegate void VoidDelegate();
+
+    public static void Main()
+    {
+        VoidDelegate print;
+
+        for (int i = 0; i < (new[] { 1, 2, 3, 4 }).Length; i++)
+        {
+            print += () => Console.Write(i);
+        }
+
+        print();
+    }
+}
+```
+
 ```
 * Оптимизируйте запрос
 ```SQL
