Update Вопросы .NET MOEX.md

--- a/Вопросы .NET MOEX.md
+++ b/Вопросы .NET MOEX.md
@@ -213,12 +213,12 @@ public static void WriteValue()
 }
 
 * Что выведет следующий код?
-```C#
+```c#
 Console.WriteLine(string.Join(", ", new [] { 1, 2, 3, 4 }.Select(i => i % 2 == 0)));
 ```
 
 * Что выведет следующая программа?
-```C# 
+```c#
 using System;
 public class Program
 {
@@ -240,7 +240,7 @@ public class Program
 
 ```
 * Оптимизируйте запрос
-```SQL
+```sql
 select m.[mail], s.[Status]
 from [dbo].[Accounts] a
     join (
