--- a/Вопросы .NET MOEX.md
+++ b/Вопросы .NET MOEX.md
@@ -283,3 +283,98 @@ from [dbo].[Accounts] a
 * Какое преимущество дает ORM?
 * Что такое DDoS и в чем его разница с DoS?
 * Есть сервис управления пользователями системы, опишите REST-сервис, который предоставлял бы данный функционал.
+
+# Вопросы по C# v2
+
+* Что будет в консоли
+```c#
+class Program {
+        static String location;
+        static DateTime time;
+
+        static void Main() {
+                Console.WriteLine(location == null ? "location is null" : location);
+                Console.WriteLine(time == null ? "time is null" : time.ToString());
+        }
+}
+```
+
+* Выполняются три не связанные между собой задачи, можно ли это как-либо оптимизировать?
+```c#
+{
+        Task t0 = DoAsyncTask0();
+        Task t1 = DoAsyncTask1();
+        Task t2 = DoAsyncTask2();
+
+        Task.WhenAll(new[]{t0, t1, t2});
+
+        return new SuccessResult()
+}
+```
+
+* Что будет происходить в следующем участке кода:
+```c#
+{
+        short a = 0;
+        object b = a;
+        int c = (int)b;
+}
+```
+
+* **В чём разница между string и String**
+* 4.1 чем плох этот код?
+* 4.2 можно ли его нормально протестировать?
+* 4.3 какие принципы нарушаются?
+* 4.4 что можно исправить?
+
+```c#
+public interface IReportBuilder
+{
+        void CreateReports();
+}
+
+public interface IEmailReportSender
+{
+        void Send(Report report)
+}
+
+public class Program
+{
+        public static void Main()
+        {
+                using( var reportBuilder = new ReportBuilder(),
+                        var reportSender = new EmailReportSender(),
+                        var reporter = new Reporter() )
+                {
+                        try
+                        {
+                                reporter.SendReports(reportBuilder, reportSender);
+                        }
+                        catch (NoReportsException ex)
+                        {
+                                Console.WriteLine(ex.Message);
+                        }
+                        catch (SystemExcepton ex)
+                        {
+                                Console.WriteLine(ex.Message);
+                        }
+                }
+        }
+}
+
+public class Reporter
+{
+        virtual public void SendReports(IReportBuilder reportBuilder, IEmailReportSender reportSender)
+        {
+                IList<Report> reports = reportBuilder.CreateReports();
+
+                if (reports.Count() == 0)
+                        throw new NoReportsException();
+
+                foreach (Report report in reports)
+                {
+                        reportSender.Send(report);
+                }
+        }
+}
+```
