--- a/Вопросы .NET MOEX.md
+++ b/Вопросы .NET MOEX.md
@@ -335,7 +335,7 @@ public interface IReportBuilder
 
 public interface IEmailReportSender
 {
-        void Send(Report report)
+        void Send(Report report);
 }
 
 public class Program
