--- a/Ссылки.md
+++ b/Ссылки.md
@@ -1,3 +1,4 @@
 ## Фронтенд
 
 * [Фронтенд-2019: итоги года](https://habr.com/ru/company/ruvds/blog/481576/)
+* [Мой новый стек веб-технологий для 2020 года](https://habr.com/ru/company/ruvds/blog/481572/)
