--- a/Ссылки.md
+++ b/Ссылки.md
@@ -3,3 +3,4 @@
 * [Фронтенд-2019: итоги года](https://habr.com/ru/company/ruvds/blog/481576/)
 * [Мой новый стек веб-технологий для 2020 года](https://habr.com/ru/company/ruvds/blog/481572/)
 * [Akka.NET](https://habr.com/ru/post/320396/)
+* [DDD - RSDN](http://rsdn.org/forum/design/6357330)
