--- a/Ссылки.md
+++ b/Ссылки.md
@@ -6,3 +6,4 @@
 * [DDD - RSDN](http://rsdn.org/forum/design/6357330)
 * [Example bonsai](https://github.com/impworks/bonsai)
 * [Patterns for distributed transactions within a microservices architecture](https://developers.redhat.com/blog/2018/10/01/patterns-for-distributed-transactions-within-a-microservices-architecture/)
+* [Monolith to Microservices](https://www.nginx.com/resources/library/monolith-to-microservices/)
