--- a/Ссылки.md
+++ b/Ссылки.md
@@ -11,3 +11,5 @@
 * [Monolith to Microservices](https://www.nginx.com/resources/library/monolith-to-microservices/)
 
 * [Task](https://agladky.ru/blog/async-await-example/)
+
+* [Task.Yield()](https://ru.stackoverflow.com/questions/652137/%D0%A7%D1%82%D0%BE-%D1%82%D0%B0%D0%BA%D0%BE%D0%B5-task-yield)
