--- a/Ссылки.md
+++ b/Ссылки.md
@@ -89,8 +89,14 @@ https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-configuration.ht
 https://www.elastic.co/guide/en/logstash/7.5/filebeat-modules.html
 https://www.elastic.co/guide/en/logstash/7.5/installing-logstash.html
 https://www.elastic.co/guide/en/logstash/7.5/advanced-pipeline.html
+
+Remove duplicated
+
 https://www.elastic.co/blog/logstash-lessons-handling-duplicates
+
 https://www.elastic.co/blog/efficient-duplicate-prevention-for-event-based-data-in-elasticsearch
+
+
 https://www.elastic.co/guide/en/beats/filebeat/5.6/enable-filebeat-debugging.html
 
 
