--- a/Ссылки.md
+++ b/Ссылки.md
@@ -102,3 +102,7 @@ https://www.elastic.co/guide/en/beats/filebeat/5.6/enable-filebeat-debugging.htm
 
 https://openapi-generator.tech/
 
+
+[ФИАС](wiki.gis-lab.info/w/%D0%A4%D0%98%D0%90%D0%A1)
+
+
