--- a/Ссылки.md
+++ b/Ссылки.md
@@ -106,3 +106,7 @@ https://openapi-generator.tech/
 [ФИАС](wiki.gis-lab.info/w/%D0%A4%D0%98%D0%90%D0%A1)
 [ФИАС](https://habr.com/ru/post/451720/)
 
+
+[Кэш](https://habr.com/ru/company/otus/blog/502974/)
+
+
