--- a/Ссылки.md
+++ b/Ссылки.md
@@ -109,4 +109,4 @@ https://openapi-generator.tech/
 
 [Кэш](https://habr.com/ru/company/otus/blog/502974/)
 
-
+[GIT](https://habr.com/ru/company/mailru/blog/501596/)
